--- a/CSS/task2/style.css
+++ b/CSS/task2/style.css
@@ -1,4 +1,4 @@
-*{
+/*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,9 +7,6 @@
 #container{
 height: fit-content;
 width: fit-content;
-MARGIN-TOP: 100px;
-margin-left: 515px;
-
 border:2px solid cyan ;
 display: grid;
 justify-content: center;
@@ -20,7 +17,7 @@ background-color: white;
 grid-template-columns: repeat(3,1fr);
 grid-template-rows: repeat(3,1fr);
 /*grid-template-columns: repeat(auto-fill,min-max(150px,1fr) );*/
-padding: 5px;
+/*padding: 5px;
 border-radius: 5px;
 flex-wrap:wrap;
 
@@ -46,3 +43,91 @@ h1{
     margin-left: 480px;
     margin-top: 30px;
 }
+.p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/*
+
+/* Reset styles */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Container styles */
+  #container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px solid cyan;
+    background-color: #fff; /* Use hex code for white */
+    width: fit-content;
+    height: fit-content;
+  }
+  
+  /* Item styles */
+  .a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    height: 50px;
+    width: 50px;
+    border: 2px solid rgb(59, 59, 231);
+    background-color: #ccc; /* Use hex code for grey */
+    border-radius: 10px;
+  }
+  
+  /* Body styles */
+  body {
+    background-color: #b1e318; /* Use hex code for rgb(177, 227, 24) */
+  }
+  
+  /* Heading styles */
+  h1 {
+    margin: 30px 0 0 480px; /* Simplify margin shorthand */
+  }
+  
+  /* Paragraph styles */
+  .p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  @media only screen and (max-width: 768px) {
+    #container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+    }
+    .a {
+      width: 40px;
+      height: 40px;
+    }
+    h1 {
+      margin: 20px 0 0 240px;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    #container {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(1, 1fr);
+    }
+    .a {
+      width: 30px;
+      height: 30px;
+    }
+    h1 {
+      margin: 10px 0 0 120px;
+    }
+  }
+  
