--- a/CSS/task2/style.css
+++ b/CSS/task2/style.css
@@ -122,12 +122,12 @@ h1{
       grid-template-columns: repeat(1, 1fr);
       grid-template-rows: repeat(1, 1fr);
     }
-    .a {
+    /*.a {
       width: 30px;
       height: 30px;
     }
     h1 {
       margin: 10px 0 0 120px;
-    }
+    }*/
   }
   
